@@ -1,5 +1,8 @@
 Release Notes
 
+* 5/4/2016
+  * changed to copy ES merge trf to job.transformation
+
 * 5/3/2016
   * using merging for ES jobs while ES merge is running
 
